
public class Adulte extends Personne{

}
