@startuml
class Hôtel{
    +adresse String
    +nbPièces int
    +catégorie String
    +chiffreAffaire()
}
class Personne{
    +nom String
    +prénom String 
    +age : int
}

class Personnel{
    +salaire float
    +estDirecteur Boolean
}

class Adulte{

}
note right: age > 16
class Chambre{
    +nbLits int
    +prix float
    +numéro int
    +sdb SDB
    +chiffreAffaireQuot() : float
    +chiffreAffaireHebdo() : float
}

class Réservation{
    +numRéservation String
    +dateArrivé date
    +dateDépart date
    +loyerPayé float
    +générerFacture()
}

enum SDB{
    douche
    baignoire
}

Personne <|-- Adulte
Adulte <|-- Personnel
Hôtel "1..1" *-- "2..*" Chambre
Personnel "1..*" <-> "1..1" Hôtel : travaillerDans
Personne "1..*" <-> "1..*" Hôtel :séjourne​
Personne "1..1" <-> "0..*" Réservation : réserve
Chambre -> "0..*" Réservation : concernéePar
Réservation -> "1..1" Chambre : concerne


@enduml